[package]
name = "coobaxx"
version = "0.1.0"
authors = ["Jeremy Delley <jeremy.delley@imex-dtp.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
#ESP related dependencies
esp-backtrace = { version = "0.14.1", features = [
  "esp32c6",
  "exception-handler",
  "panic-handler",
  "defmt",
] }
esp-hal = { version = "0.22.0", features = ["esp32c6", "defmt"] }
esp-wifi = { version = "0.11.0", features = [
  "esp-alloc",
  "esp32c6",
  "wifi",
  "defmt",
] }
esp-hal-embassy = { version = "0.5.0", features = [
  "esp32c6",
  "executors",
  "integrated-timers",
  "defmt",
] }
esp-alloc = { version = "0.5.0" }
#Embassy related dependencies
embassy-executor = { version = "0.6.2", features = [
  "executor-thread",
  "task-arena-size-40960",
] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = "0.3.2"
embassy-net = { version = "0.5.0", features = [
  "dhcpv4",
  "defmt",
  "tcp",
  "dns",
  "dhcpv4-hostname",
  "medium-ethernet",
  "proto-ipv4",
] }
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embedded-io = "0.6.1"
heapless = { version = "0.8.0", default-features = false, features = [
  "defmt-03",
] }
#Embedded related dependencies
embedded-nal-async = "0.8.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
static_cell = "2.1.0"
defmt = "0.3.8"
rust-mqtt = { version = "0.3.0", default-features = false, features = [
  "defmt",
] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
# ssd1306 = { git = "https://github.com/embedevices-rs/ssd1306.git" }
ssd1306 = "0.9.0"
embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }
display-interface = { version = "0.5.0", features = ["defmt-03"] }
display-interface-i2c = "0.5.0"
critical-section = "1.2.0"
fugit = { version = "0.3.7", features = ["defmt"] }
esp-storage = { version = "0.4.0", features = ["esp32"] }
embedded-storage = "0.3.1"
defmt-rtt = "0.4.1"
ds323x = { git = "https://github.com/DBLouis/ds323x-rs" }

[build-dependencies]
dotenvy = { version = "0.15.7" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
# opt-level = 's'
opt-level = 3

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
# opt-level = 's'
opt-level = 3
overflow-checks = false

[[bin]]
name = "coubaxx"
path = "src/main.rs"
test = false
doctest = false
bench = false
